--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormCliente.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormCliente.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -47,6 +47,14 @@
                </font>
             </Label>
             <TextField maxWidth="-Infinity" prefHeight="36.0" prefWidth="280.0" style="-fx-border-color: black;" />
+            <Label text="Os campos com * são obrigatorios" translateX="2.0">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="8.0" />
+               </VBox.margin>
+            </Label>
          </children>
          <GridPane.margin>
             <Insets left="10.0" />
@@ -60,6 +68,11 @@
                </font>
             </Label>
             <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="280.0" style="-fx-border-color: black;" />
+            <Button alignment="TOP_RIGHT" mnemonicParsing="false" text="SALVAR" translateX="200.0" translateY="8.0">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
          </children>
       </VBox>
 
