--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/MainApp.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/MainApp.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<BorderPane fx:id="root" stylesheets="/css/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="controller.MainAppController">
+<BorderPane fx:id="root" stylesheets="/css/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainAppController">
 
    <!-- Sidebar -->
    <left>
@@ -37,7 +37,7 @@
                <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
             <Button styleClass="nav-button" text="Configurações" />
-            <Button mnemonicParsing="false" onAction="#onSairClick" text="Sair" />
+            <Button mnemonicParsing="false" onAction="#onSairClick" styleClass="nav-button" text="Sair" />
          </VBox>
       </VBox>
    </left>
@@ -59,12 +59,14 @@
 
    <!-- Main content -->
    <center>
+      <StackPane fx:id="conteudo"/>
+      <!--
       <VBox spacing="20">
          <padding>
             <Insets bottom="20" left="20" right="20" top="20" />
          </padding>
 
-         <!-- Cards -->
+         <!- Cards
          <HBox spacing="15">
             <VBox alignment="CENTER" styleClass="card">
                <Label styleClass="card-title" text="Total de Imóveis" />
@@ -99,12 +101,13 @@
             </children>
          </HBox>
 
-         <!-- Recent Activities -->
+         <!- Recent Activities
          <VBox spacing="10" styleClass="card">
             <Label styleClass="section-title" text="Atividades Recentes" />
             <ListView fx:id="listAtividades" />
          </VBox>
 
       </VBox>
+      -->
    </center>
 </BorderPane>
