--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormCliente.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormCliente.fxml
@@ -5,76 +5,83 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FormClienteController">
    <children>
-      <VBox alignment="CENTER_LEFT" cache="true" cacheHint="SPEED" prefHeight="200.0" prefWidth="100.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="200.0">
          <children>
-            <Label alignment="BOTTOM_LEFT" contentDisplay="TEXT_ONLY" text="NOME*">
+            <Label text="Cadastrar Novo Cliente ">
                <font>
-                  <Font name="Arial Black" size="12.0" />
+                  <Font name="Arial Black" size="16.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
             </Label>
-            <TextField maxWidth="-Infinity" prefHeight="36.0" prefWidth="280.0" style="-fx-border-color: black;" />
          </children>
-         <GridPane.margin>
-            <Insets left="10.0" />
-         </GridPane.margin>
-      </VBox>
-      <VBox alignment="CENTER_LEFT" cache="true" cacheHint="SPEED" layoutX="20.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+      </HBox>
+      <Separator prefWidth="200.0">
+         <padding>
+            <Insets top="1.0" />
+         </padding>
+      </Separator>
+      <VBox prefHeight="100.0" prefWidth="100.0">
          <children>
-            <Label alignment="BOTTOM_LEFT" contentDisplay="TEXT_ONLY" maxWidth="-Infinity" prefWidth="280.0" text="CPF(apenas numeros)*">
-               <font>
-                  <Font name="Arial Black" size="12.0" />
-               </font>
-            </Label>
-            <TextField maxWidth="-Infinity" prefHeight="36.0" prefWidth="280.0" style="-fx-border-color: black;" />
-         </children>
-      </VBox>
-      <VBox alignment="CENTER_LEFT" cache="true" cacheHint="SPEED" layoutX="310.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
-         <children>
-            <Label alignment="BOTTOM_LEFT" contentDisplay="TEXT_ONLY" maxWidth="-Infinity" prefWidth="280.0" text="EMAIL">
-               <font>
-                  <Font name="Arial Black" size="12.0" />
-               </font>
-            </Label>
-            <TextField maxWidth="-Infinity" prefHeight="36.0" prefWidth="280.0" style="-fx-border-color: black;" />
-            <Label text="Os campos com * são obrigatorios" translateX="2.0">
-               <font>
-                  <Font name="Arial Black" size="12.0" />
-               </font>
+            <Label text="NOME*" />
+            <TextField promptText="👤 Nome Completo do Cliente">
                <VBox.margin>
-                  <Insets top="8.0" />
-               </VBox.margin>
-            </Label>
+                  <Insets />
+               </VBox.margin></TextField>
          </children>
-         <GridPane.margin>
-            <Insets left="10.0" />
-         </GridPane.margin>
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
       </VBox>
-      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <VBox layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0">
          <children>
-            <Label text="TELEFONE">
-               <font>
-                  <Font name="Arial Black" size="12.0" />
-               </font>
-            </Label>
-            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="280.0" style="-fx-border-color: black;" />
-            <Button alignment="TOP_RIGHT" mnemonicParsing="false" text="SALVAR" translateX="200.0" translateY="8.0">
+            <Label text="CPF*" />
+            <TextField promptText="00000000000" />
+         </children>
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </VBox>
+      <VBox layoutX="10.0" layoutY="210.0" prefHeight="100.0" prefWidth="100.0">
+         <children>
+            <Label text="EMAIL" />
+            <TextField promptText="📧 email@exemplo.com" />
+         </children>
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </VBox>
+      <VBox prefHeight="100.0" prefWidth="100.0">
+         <children>
+            <Label text="TELEFONE" />
+            <TextField promptText="📞(00) 00000-0000">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
+            </TextField>
+         </children>
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </VBox>
+      <Separator prefWidth="200.0" />
+      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0" />
+            <Button mnemonicParsing="false" text="Cancelar">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" text="Salvar">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
             </Button>
          </children>
-      </VBox>
-
+      </HBox>
    </children>
-</GridPane>
+</VBox>
