--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormCliente.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormCliente.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FormClienteController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" stylesheets="/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FormClienteController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="200.0">
          <children>
@@ -27,7 +27,7 @@
       <VBox prefHeight="100.0" prefWidth="100.0">
          <children>
             <Label text="NOME*" />
-            <TextField promptText="👤 Nome Completo do Cliente">
+            <TextField fx:id="nomeField" promptText="👤 Nome Completo do Cliente">
                <VBox.margin>
                   <Insets />
                </VBox.margin></TextField>
@@ -39,7 +39,7 @@
       <VBox layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="100.0">
          <children>
             <Label text="CPF*" />
-            <TextField promptText="00000000000" />
+            <TextField fx:id="cpfField" promptText="00000000000" />
          </children>
          <VBox.margin>
             <Insets left="10.0" right="10.0" />
@@ -48,7 +48,7 @@
       <VBox layoutX="10.0" layoutY="210.0" prefHeight="100.0" prefWidth="100.0">
          <children>
             <Label text="EMAIL" />
-            <TextField promptText="📧 email@exemplo.com" />
+            <TextField fx:id="emailField" promptText="📧 email@exemplo.com" />
          </children>
          <VBox.margin>
             <Insets left="10.0" right="10.0" />
@@ -57,7 +57,7 @@
       <VBox prefHeight="100.0" prefWidth="100.0">
          <children>
             <Label text="TELEFONE" />
-            <TextField promptText="📞(00) 00000-0000">
+            <TextField fx:id="telefoneField" promptText="📞(00) 00000-0000">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -75,11 +75,17 @@
                <HBox.margin>
                   <Insets left="20.0" />
                </HBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Button>
-            <Button mnemonicParsing="false" text="Salvar">
+            <Button mnemonicParsing="false" onAction="#salvar" styleClass="btn-salvar" text="Salvar">
                <HBox.margin>
                   <Insets left="20.0" />
                </HBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </Button>
          </children>
       </HBox>
