--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormCliente.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormCliente.fxml
@@ -24,6 +24,15 @@
             <Insets top="1.0" />
          </padding>
       </Separator>
+      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <RadioButton fx:id="status" mnemonicParsing="false" prefHeight="17.0" prefWidth="107.0" selected="true" text="ATIVO">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </RadioButton>
+         </children>
+      </HBox>
       <VBox prefHeight="100.0" prefWidth="100.0">
          <children>
             <Label text="NOME*" />
