--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/ClientesView.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/ClientesView.fxml
@@ -5,7 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="root" stylesheets="/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientesController">
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
+<BorderPane fx:id="root" stylesheets="/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientesController">
    <top>
         <VBox spacing="20.0" BorderPane.alignment="CENTER">
             <padding>
@@ -18,13 +20,26 @@
                <font>
                   <Font name="Arial Black" size="15.0" />
                </font></Label>
-                <Pane HBox.hgrow="ALWAYS" />
+                <Pane maxWidth="100.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
+                <HBox spacing="10">
+                    <TextField fx:id="campoPesquisa" promptText="Pesquisar cliente..." />
+                    <ComboBox fx:id="filtroStatus" prefWidth="150">
+                        <items>
+                            <FXCollections fx:factory="observableArrayList">
+                                <String fx:value="Todos" />
+                                <String fx:value="Ativo" />
+                                <String fx:value="Desativado" />
+                            </FXCollections>
+                        </items>
+                    </ComboBox>
+                </HBox>>
                 <Button onAction="#abrirNovoClienteModal" styleClass="primary-button" text="➕ Novo Cliente" />
             </HBox>
 
             <!-- Tabela de Clientes-->
             <TableView fx:id="tabelaClientes" prefHeight="400" prefWidth="800.0">
                 <columns>
+               <TableColumn fx:id="colunaId" prefWidth="60.0" text="id" />
                     <TableColumn fx:id="colunaNome" prefWidth="200" text="Nome" />
                     <TableColumn fx:id="colunaEmail" prefWidth="240" text="E-mail" />
                     <TableColumn fx:id="colunaTelefone" prefWidth="120" text="Telefone" />
