--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/ImovelView.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/ImovelView.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sceneBuilder.ImovelView"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane fx:id="root" stylesheets="/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientesController">
+    <top>
+        <VBox spacing="20.0" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets bottom="20" left="20" right="20" top="20" />
+            </padding>
 
-</AnchorPane>
+            <!-- Título e botão-->
+            <HBox alignment="CENTER_LEFT" spacing="10.0">
+                <Label styleClass="section-title" text="Clientes">
+                    <font>
+                        <Font name="Arial Black" size="15.0" />
+                    </font></Label>
+                <Pane HBox.hgrow="ALWAYS" />
+                <Button onAction="#abrirNovoClienteModal" styleClass="primary-button" text="➕ Novo Cliente" />
+            </HBox>
+
+            <!-- Tabela de Clientes-->
+            <TableView fx:id="tabelaClientes" prefHeight="400" prefWidth="800.0">
+                <columns>
+                    <TableColumn fx:id="colunaNome" prefWidth="200" text="Nome" />
+                    <TableColumn fx:id="colunaEmail" prefWidth="240" text="E-mail" />
+                    <TableColumn fx:id="colunaTelefone" prefWidth="120" text="Telefone" />
+                    <TableColumn fx:id="colunaStatus" prefWidth="120" text="Status" />
+                    <TableColumn fx:id="colunaAcoes" prefWidth="100" text="Ações" />
+                </columns>
+            </TableView>
+        </VBox>
+    </top>
+</BorderPane>
