--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/ClientesView.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/ClientesView.fxml
@@ -18,7 +18,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                 <Label styleClass="section-title" text="Clientes">
                <font>
-                  <Font name="Arial Black" size="15.0" />
+                  <Font name="Arial Black" size="18.0" />
                </font></Label>
                 <Pane maxWidth="100.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
                  <ComboBox fx:id="comboFiltro" prefHeight="25.0" prefWidth="85.0">
@@ -33,19 +33,15 @@
                      </items>
                  </ComboBox>
                 <HBox alignment="CENTER_LEFT" spacing="10">
-                    <TextField fx:id="campoPesquisa" promptText="Pesquisar cliente..." />
-               <Button fx:id="btnPesquisa" mnemonicParsing="false" onAction="#pesquisar" text="alou" textAlignment="CENTER">
-                  <HBox.margin>
-                     <Insets left="-5.0" />
-                  </HBox.margin>
+                    <TextField fx:id="campoPesquisa" prefHeight="35.0" prefWidth="185.0" promptText="Pesquisar cliente...">
                   <font>
-                     <Font size="10.0" />
-                  </font>
-               </Button>
+                     <Font size="14.0" />
+                  </font></TextField>
                 </HBox>
+            <Pane HBox.hgrow="ALWAYS" />
                 <Button fx:id="NovoCliente" onAction="#abrirNovoClienteModal" styleClass="primary-button" text="➕ Novo Cliente">
                <HBox.margin>
-                  <Insets left="250.0" />
+                  <Insets />
                </HBox.margin></Button>
             </HBox>
 
