--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/MainApp.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/MainApp.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<BorderPane fx:id="root" stylesheets="@/css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainAppController">
+<BorderPane fx:id="root" stylesheets="@/css/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainAppController">
 
    <!-- Sidebar -->
    <left>
@@ -35,7 +35,7 @@
             <padding>
                <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
-            <Button styleClass="nav-button" text="Configurações" />
+            <Button onAction="#abrirConfiguracao" styleClass="nav-button" text="Configurações" />
             <Button mnemonicParsing="false" onAction="#onSairClick" styleClass="nav-button" text="Sair" />
          </VBox>
       </VBox>
